# polymarket-weather-bot

./: .gitignore  README.md  RESOURCES.md  bot.db  bot.db-shm  bot.db-wal  polymarket-weather-bot.service  polymarket-weather-tunnel.service  polymarket-weatherbot.nginx  pyproject.toml  run_bot.py
frontend/: index.html
polymarket_weather_bot/: __init__.py  account.py  bootstrap_auth.py  bot.py  clob_sdk.py  dashboard.py  executor.py  models.py  notifier.py  parser.py  polymarket.py  run_bot.py  store.py  strategy.py  telegram_commands.py  weather_sources.py
scripts/: bootstrap_polymarket_auth.py
tests/: test_bootstrap_auth.py  test_core.py
web/: index.html
