[project]
name = "polymarket-weather-bot"
version = "0.1.0"
description = "Noise-filtered Polymarket weather bot with dashboard"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client-v2>=1.0.0",
]
readme = "README.md"
license = {text = "MIT"}

authors = [{name = "Hermes"}]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_weather_bot*"]
exclude = ["frontend*", "web*", "tests*"]
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
